[build-system]
# PEP 639 support for license/license-files landed in setuptools 77.0.3+
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treetools"
version = "1.0.0"
description = "Tools for processing treebank trees"
readme = "README.md"
authors = [{ name = "Wolfgang Maier", email = "wolfgang.maier@gmail.com" }]

license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.11"  # 3.7 is EOL; set back if you must support it
keywords = ["treebanks", "trees", "grammar"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/wmaier/treetools"
Repository = "https://github.com/wmaier/treetools"
Issues = "https://github.com/wmaier/treetools/issues"
Download = "https://github.com/wmaier/treetools/archive/v0.4.0.tar.gz"
Changelog = "https://github.com/wmaier/treetools/releases"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.scripts]
treetools-cli = "treetools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["treetools"]
